--- a/Pandas /Pandas 기초 - cheat sheet 따라하기 1, 2 - (29).ipynb
+++ b/Pandas /Pandas 기초 - cheat sheet 따라하기 1, 2 - (29).ipynb
@@ -3,41 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5034f7cf",
+   "id": "f7e04ea5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6364b38a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7eac2a16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(\n",
-    "    {\"a\" : [4, 5, 6],\n",
-    "    \"b\" : [7, 8, 9],\n",
-    "    \"c\" : [10, 11, 12]},\n",
-    "    index = [1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8f6c1ac7",
+   "execution_count": 2,
+   "id": "26a7caba",
    "metadata": {},
    "outputs": [
     {
@@ -96,19 +73,24 @@
        "3  6  9  12"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.DataFrame(\n",
+    "    {\"a\" : [4, 5, 6],\n",
+    "    \"b\" : [7, 8, 9],\n",
+    "    \"c\" : [10, 11, 12]},\n",
+    "    index = [1,2,3])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1bd178a0",
+   "execution_count": 3,
+   "id": "1e923da2",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +102,7 @@
        "Name: a, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0cf54ae5",
+   "execution_count": 4,
+   "id": "ace9ca01",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +169,7 @@
        "3  9  12"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e2b5a790",
+   "execution_count": 5,
+   "id": "381d14a8",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +193,7 @@
        "Name: 1, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,29 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0b7da6a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[1,\"b\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3dd2a425",
+   "execution_count": 6,
+   "id": "73da8798",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +257,7 @@
        "3  6  9  12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,93 +268,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "428aa2e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = pd.Series([1,3,5,np.nan,6,8])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e5d93400",
+   "execution_count": 7,
+   "id": "cb824563",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1.0\n",
-       "1    3.0\n",
-       "2    5.0\n",
-       "3    NaN\n",
-       "4    6.0\n",
-       "5    8.0\n",
-       "dtype: float64"
+       "7"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "df.loc[1,\"b\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "aad13480",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "dates = pd.date_range('20130101', periods=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "80f5bbc4",
+   "execution_count": 8,
+   "id": "4afb01bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2013-01-01', '2013-01-02', '2013-01-03', '2013-01-04',\n",
-       "               '2013-01-05', '2013-01-06'],\n",
-       "              dtype='datetime64[ns]', freq='D')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0d0583c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(np.random.randn(6,4), index=dates, columns=list('ABCD'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7588e00b",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -416,98 +314,121 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>0.112792</td>\n",
-       "      <td>1.629800</td>\n",
-       "      <td>0.139071</td>\n",
-       "      <td>0.820783</td>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>0.379264</td>\n",
-       "      <td>-0.370015</td>\n",
-       "      <td>-0.457571</td>\n",
-       "      <td>-0.547396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>-1.938471</td>\n",
-       "      <td>0.727516</td>\n",
-       "      <td>0.781586</td>\n",
-       "      <td>0.408016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>1.922389</td>\n",
-       "      <td>0.400473</td>\n",
-       "      <td>0.477910</td>\n",
-       "      <td>0.799574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-05</th>\n",
-       "      <td>0.114304</td>\n",
-       "      <td>0.556708</td>\n",
-       "      <td>1.282775</td>\n",
-       "      <td>-0.002675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-06</th>\n",
-       "      <td>1.055765</td>\n",
-       "      <td>0.803614</td>\n",
-       "      <td>1.842967</td>\n",
-       "      <td>2.242461</td>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   A         B         C         D\n",
-       "2013-01-01  0.112792  1.629800  0.139071  0.820783\n",
-       "2013-01-02  0.379264 -0.370015 -0.457571 -0.547396\n",
-       "2013-01-03 -1.938471  0.727516  0.781586  0.408016\n",
-       "2013-01-04  1.922389  0.400473  0.477910  0.799574\n",
-       "2013-01-05  0.114304  0.556708  1.282775 -0.002675\n",
-       "2013-01-06  1.055765  0.803614  1.842967  2.242461"
+       "   a  b\n",
+       "3  6  9\n",
+       "2  5  8"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.loc[[3,2],[\"a\",\"b\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bc9c3bfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b   c\n",
+       "1  4  7  10\n",
+       "2  5  8  11\n",
+       "3  6  9  12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(\n",
+    "      [[4, 7, 10],\n",
+    "       [5, 8, 11],\n",
+    "       [6, 9, 12]],\n",
+    "      index=[1, 2, 3],\n",
+    "      columns=['a', 'b', 'c'])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda8114e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35f378e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b889d4d",
+   "id": "3bc3b8bd",
    "metadata": {},
    "outputs": [],
    "source": []
