--- a/EDA_Titanic/Titanic_(by_Kitenyu).ipynb
+++ b/EDA_Titanic/Titanic_(by_Kitenyu).ipynb
@@ -15,10 +15,10 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt #Python 프로그래밍 언어 및 수학적 확장 NumPy 라이브러리를 활용한 플로팅 라이브러리 #데이터 시각화 라이브러리\n",
+    "import seaborn as sns #데이터 시각화 라이브러리 #matplotlib 보다 간편하고 이쁨\n",
     "\n",
     "plt.style.use('seaborn')\n",
     "sns.set(font_scale=2.5)\n",
@@ -26,9 +26,9 @@
     "import missingno as msno #데이터셋에 널데이터를 쉽게 보여주는 라이브러리 #pip install missingno\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "warnings.filterwarnings('ignore') #경고창 숨기기\n",
     "\n",
-    "%matplotlib inline \n",
+    "%matplotlib inline #주피터 노트북을 실행한 브라우저에서 바로 그림을 볼 수 있게 함, 브라우저 내부(inline)에 바로 그려지도록 해주는 코드이다.\n",
     "\n",
     "print('success setting')"
    ]
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "a57e66b6-ea3e-4733-af33-ea8c9770f5ef",
    "metadata": {},
    "outputs": [
@@ -503,18 +503,18 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.shape #데이터 형태보기"
+    "df_train.shape #데이터 형태보기 #Column 12개 row 891개"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "4b2ee1bb-30ad-4dc4-bfb5-db6add0396d9",
    "metadata": {},
    "outputs": [
@@ -538,11 +538,29 @@
     }
    ],
    "source": [
-    "# 모든칼럼 null값의 퍼센테이지율 (null데이터가있는지확인)) - train 데이터\n",
-    "\n",
+    "# 모든 칼럼 null값의 퍼센테이지 (null 데이터가 얼마나 있는지 확인)) - train 데이터\n",
     "for col in df_train.columns:\n",
     "    msg = 'column: {:>10}\\t Percent of NaN value: {:.2f}%'.format(col,100*(df_train[col].isnull().sum() / df_train[col].shape[0]))\n",
     "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd8a0632-6130-47bf-a4ce-6262405b518a",
+   "metadata": {},
+   "source": [
+    ">PassengerId : 승객 ID \\\n",
+    "Survived    : 생존=1, 죽음=0 \\\n",
+    "Pclass      : 승객 등급. 1등급=1, 2등급=2, 3등급=3 (Passenger Class) \\\n",
+    "Name        : 이름 \\\n",
+    "Sex         : 성별 \\\n",
+    "Age         : 나이 \\\n",
+    "SibSp       : 함께 탑승한 형제 또는 배우자 수 (Sibling,Spouse) \\\n",
+    "ParCh       : 함께 탑승한 부모 또는 자녀 수 (Parents, Children) \\\n",
+    "Ticket      : 티켓 번호 \\\n",
+    "Fare        : 요금 \\\n",
+    "Cabin       : 선실 번호 \\\n",
+    "Embarked    : 탑승장소 S=Southhampton, C=Cherbourg, Q=Queenstown"
    ]
   },
   {
@@ -570,7 +588,7 @@
     }
    ],
    "source": [
-    "# 모든칼럼 null값의 퍼센테이지율 (null데이터가있는지확인)) - test 데이터\n",
+    "# 모든 칼럼 null값의 퍼센테이지 (null 데이터가 있는지 확인)) - test 데이터\n",
     "\n",
     "for col in df_test.columns:\n",
     "    msg='column: {:>10}\\t Percent of NaN value: {:.2f}%'.format(col,(df_test[col].isnull().sum()/df_test[col].shape[0])*100)\n",
@@ -579,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "dcc6d697-513b-42c6-b13a-9f4550358bf0",
    "metadata": {},
    "outputs": [
@@ -589,7 +607,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -622,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dc1889cd-e3e6-4503-b3df-a8b55055f376",
    "metadata": {},
    "outputs": [
@@ -794,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "e5b9363d-c18d-465b-bd2f-66ca7ad970b3",
    "metadata": {},
    "outputs": [
@@ -851,18 +869,155 @@
        "3       0.242363"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train[['Pclass','Survived']].groupby(['Pclass']).mean() #.mean() / .sum() /.count()"
+    "df_train[['Pclass','Survived']].groupby(['Pclass']).mean() # 객실 들급별 생존율\n",
+    "#.mean() / .sum() /.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
+   "id": "0ef02830-f70a-4c1e-8985-2823e5d36e76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Survived\n",
+       "Pclass          \n",
+       "1            136\n",
+       "2             87\n",
+       "3            119"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[['Pclass','Survived']].groupby(['Pclass']).sum() # 객실 등급별 생존자 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d3a33a1c-cbfd-4381-84b0-5667b85469bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Survived\n",
+       "Pclass          \n",
+       "1            216\n",
+       "2            184\n",
+       "3            491"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[['Pclass','Survived']].groupby(['Pclass']).count() # 객실 등급별 손님 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "cb319608-540b-457d-8b04-49084c356fe1",
    "metadata": {},
    "outputs": [
@@ -872,7 +1027,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "616e10bf-7a82-4afe-a1c1-5152185e5109",
    "metadata": {},
    "outputs": [
@@ -892,40 +1047,40 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_5f321_row0_col0, #T_5f321_row1_col1, #T_5f321_row1_col2 {\n",
+       "#T_9f17d_row0_col0, #T_9f17d_row1_col1, #T_9f17d_row1_col2 {\n",
        "  background-color: #00ffff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5f321_row0_col1 {\n",
+       "#T_9f17d_row0_col1 {\n",
        "  background-color: #31ceff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5f321_row0_col2 {\n",
+       "#T_9f17d_row0_col2 {\n",
        "  background-color: #0bf4ff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5f321_row1_col0 {\n",
+       "#T_9f17d_row1_col0 {\n",
        "  background-color: #09f6ff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5f321_row2_col0 {\n",
+       "#T_9f17d_row2_col0 {\n",
        "  background-color: #9f60ff;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5f321_row2_col1 {\n",
+       "#T_9f17d_row2_col1 {\n",
        "  background-color: #20dfff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_5f321_row2_col2 {\n",
+       "#T_9f17d_row2_col2 {\n",
        "  background-color: #6f90ff;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_5f321_row3_col0, #T_5f321_row3_col1, #T_5f321_row3_col2 {\n",
+       "#T_9f17d_row3_col0, #T_9f17d_row3_col1, #T_9f17d_row3_col2 {\n",
        "  background-color: #ff00ff;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_5f321_\">\n",
+       "<table id=\"T_9f17d_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Survived</th>\n",
@@ -942,37 +1097,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_5f321_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
-       "      <td id=\"T_5f321_row0_col0\" class=\"data row0 col0\" >80</td>\n",
-       "      <td id=\"T_5f321_row0_col1\" class=\"data row0 col1\" >136</td>\n",
-       "      <td id=\"T_5f321_row0_col2\" class=\"data row0 col2\" >216</td>\n",
+       "      <th id=\"T_9f17d_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
+       "      <td id=\"T_9f17d_row0_col0\" class=\"data row0 col0\" >80</td>\n",
+       "      <td id=\"T_9f17d_row0_col1\" class=\"data row0 col1\" >136</td>\n",
+       "      <td id=\"T_9f17d_row0_col2\" class=\"data row0 col2\" >216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5f321_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
-       "      <td id=\"T_5f321_row1_col0\" class=\"data row1 col0\" >97</td>\n",
-       "      <td id=\"T_5f321_row1_col1\" class=\"data row1 col1\" >87</td>\n",
-       "      <td id=\"T_5f321_row1_col2\" class=\"data row1 col2\" >184</td>\n",
+       "      <th id=\"T_9f17d_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
+       "      <td id=\"T_9f17d_row1_col0\" class=\"data row1 col0\" >97</td>\n",
+       "      <td id=\"T_9f17d_row1_col1\" class=\"data row1 col1\" >87</td>\n",
+       "      <td id=\"T_9f17d_row1_col2\" class=\"data row1 col2\" >184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5f321_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_5f321_row2_col0\" class=\"data row2 col0\" >372</td>\n",
-       "      <td id=\"T_5f321_row2_col1\" class=\"data row2 col1\" >119</td>\n",
-       "      <td id=\"T_5f321_row2_col2\" class=\"data row2 col2\" >491</td>\n",
+       "      <th id=\"T_9f17d_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_9f17d_row2_col0\" class=\"data row2 col0\" >372</td>\n",
+       "      <td id=\"T_9f17d_row2_col1\" class=\"data row2 col1\" >119</td>\n",
+       "      <td id=\"T_9f17d_row2_col2\" class=\"data row2 col2\" >491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_5f321_level0_row3\" class=\"row_heading level0 row3\" >All</th>\n",
-       "      <td id=\"T_5f321_row3_col0\" class=\"data row3 col0\" >549</td>\n",
-       "      <td id=\"T_5f321_row3_col1\" class=\"data row3 col1\" >342</td>\n",
-       "      <td id=\"T_5f321_row3_col2\" class=\"data row3 col2\" >891</td>\n",
+       "      <th id=\"T_9f17d_level0_row3\" class=\"row_heading level0 row3\" >All</th>\n",
+       "      <td id=\"T_9f17d_row3_col0\" class=\"data row3 col0\" >549</td>\n",
+       "      <td id=\"T_9f17d_row3_col1\" class=\"data row3 col1\" >342</td>\n",
+       "      <td id=\"T_9f17d_row3_col2\" class=\"data row3 col2\" >891</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f7a825d8ee0>"
+       "<pandas.io.formats.style.Styler at 0x7f7aa0a79ac0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
