study pandas upload

--- a/[Minsuk Heo 허민석]Pandas 팬더스 강의 기초 실습/Practice07_행,열 생성 및 수정하기(row, column create, update).ipynb
+++ b/[Minsuk Heo 허민석]Pandas 팬더스 강의 기초 실습/Practice07_행,열 생성 및 수정하기(row, column create, update).ipynb
@@ -841,7 +841,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "e86711f3-a0aa-4bdb-8c88-812ba36f36a7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
