--- a/[Minsuk Heo 허민석]Pandas 팬더스 강의 기초 실습/Practice08_데이터 그룹 만들기 (group by).ipynb
+++ b/[Minsuk Heo 허민석]Pandas 팬더스 강의 기초 실습/Practice08_데이터 그룹 만들기 (group by).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1e5370ef-81fb-4ef5-8b8b-f566c8bf2eb0",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,473 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "30db5053-cdb5-46a1-a401-7022239a4b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_list = [{'name': 'John', 'major': \"Computer Science\", 'sex': \"male\"},\n",
+    "                {'name': 'Nate', 'major': \"Computer Science\", 'sex': \"male\"},\n",
+    "                {'name': 'Abraham', 'major': \"Physics\", 'sex': \"male\"},\n",
+    "                {'name': 'Brian', 'major': \"Psychology\", 'sex': \"male\"},\n",
+    "                {'name': 'Janny', 'major': \"Economics\", 'sex': \"female\"},\n",
+    "                {'name': 'Yuna', 'major': \"Economics\", 'sex': \"female\"},\n",
+    "                {'name': 'Jeniffer', 'major': \"Computer Science\", 'sex': \"female\"},\n",
+    "                {'name': 'Edward', 'major': \"Computer Science\", 'sex': \"male\"},\n",
+    "                {'name': 'Zara', 'major': \"Psychology\", 'sex': \"female\"},\n",
+    "                {'name': 'Wendy', 'major': \"Economics\", 'sex': \"female\"},\n",
+    "                {'name': 'Sera', 'major': \"Psychology\", 'sex': \"female\"}\n",
+    "         ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbf1eb95-54e7-43ab-8e76-8dfd26d542cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>major</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nate</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abraham</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brian</td>\n",
+       "      <td>Psychology</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Janny</td>\n",
+       "      <td>Economics</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Yuna</td>\n",
+       "      <td>Economics</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Jeniffer</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Edward</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Zara</td>\n",
+       "      <td>Psychology</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Wendy</td>\n",
+       "      <td>Economics</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Sera</td>\n",
+       "      <td>Psychology</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name             major     sex\n",
+       "0       John  Computer Science    male\n",
+       "1       Nate  Computer Science    male\n",
+       "2    Abraham           Physics    male\n",
+       "3      Brian        Psychology    male\n",
+       "4      Janny         Economics  female\n",
+       "5       Yuna         Economics  female\n",
+       "6   Jeniffer  Computer Science  female\n",
+       "7     Edward  Computer Science    male\n",
+       "8       Zara        Psychology  female\n",
+       "9      Wendy         Economics  female\n",
+       "10      Sera        Psychology  female"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(student_list, columns = ['name', 'major', 'sex'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf9c9f58-85cf-4eef-beeb-4101c014f7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(student_list, columns = ['name', 'major', 'sex'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48690b7c-d3b0-4471-94fa-4caff04d4a25",
+   "metadata": {},
+   "source": [
+    "## *.groupby()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4f472c86-9696-4cdf-b8a7-34cb4f6eb35a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupby_major = df.groupby('major')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "aae9c854-34f2-4225-a090-b7049e99742c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Computer Science': [0, 1, 6, 7], 'Economics': [4, 5, 9], 'Physics': [2], 'Psychology': [3, 8, 10]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupby_major.groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "952d5e6d-b16e-43eb-9b14-38836e203c58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computer Science:4\n",
+      "       name             major     sex\n",
+      "0      John  Computer Science    male\n",
+      "1      Nate  Computer Science    male\n",
+      "6  Jeniffer  Computer Science  female\n",
+      "7    Edward  Computer Science    male\n",
+      "\n",
+      "Economics:3\n",
+      "    name      major     sex\n",
+      "4  Janny  Economics  female\n",
+      "5   Yuna  Economics  female\n",
+      "9  Wendy  Economics  female\n",
+      "\n",
+      "Physics:1\n",
+      "      name    major   sex\n",
+      "2  Abraham  Physics  male\n",
+      "\n",
+      "Psychology:3\n",
+      "     name       major     sex\n",
+      "3   Brian  Psychology    male\n",
+      "8    Zara  Psychology  female\n",
+      "10   Sera  Psychology  female\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, group in groupby_major:\n",
+    "    print(name + ':' + str(len(group)))\n",
+    "    print(group)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2edeb865-a40a-4849-bdcc-ae378111878c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_major_cnt = pd.DataFrame({'count' : groupby_major.size()}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c576e61e-d971-4736-8dbd-e246f8fdbc9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>major</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Economics</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Physics</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Psychology</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              major  count\n",
+       "0  Computer Science      4\n",
+       "1         Economics      3\n",
+       "2           Physics      1\n",
+       "3        Psychology      3"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_major_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "67dbcce5-18ca-4e9f-8d8a-7c250555d877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupby_sex = df.groupby('sex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "47ea00db-49a7-421f-9115-ed5591f093e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'female': [4, 5, 6, 8, 9, 10], 'male': [0, 1, 2, 3, 7]}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupby_sex.groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b36032fe-0990-49e2-8dd0-6cdf670fc31e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "female: 6\n",
+      "        name             major     sex\n",
+      "4      Janny         Economics  female\n",
+      "5       Yuna         Economics  female\n",
+      "6   Jeniffer  Computer Science  female\n",
+      "8       Zara        Psychology  female\n",
+      "9      Wendy         Economics  female\n",
+      "10      Sera        Psychology  female\n",
+      "\n",
+      "male: 5\n",
+      "      name             major   sex\n",
+      "0     John  Computer Science  male\n",
+      "1     Nate  Computer Science  male\n",
+      "2  Abraham           Physics  male\n",
+      "3    Brian        Psychology  male\n",
+      "7   Edward  Computer Science  male\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, group in groupby_sex:\n",
+    "    print(name + ': ' + str(len(group)))\n",
+    "    print(group)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abfe1aa8-9f6e-4edf-b24c-7d7c790efa97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ??? name -> sex로 안 바꿔도 정상적으로 나오는 이유??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "85117fd8-5137-4531-a983-6aa099a9ce25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sex  count\n",
+       "0  female      6\n",
+       "1    male      5"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sex_cnt = pd.DataFrame({'count' : groupby_sex.size()}).reset_index()\n",
+    "df_sex_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a364896-6873-42c5-9e29-0361b0b149e0",
    "metadata": {},
    "outputs": [],
    "source": []
